# dwShaderCrossCompile

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cross_compiler.cpp  cross_compiler.h  main.cpp  spirv_compiler.cpp  spirv_compiler.h
